--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-popover": "^1.1.13",
     "@radix-ui/react-slot": "^1.2.2",
+    "@sanity/client": "^7.14.1",
     "@upstash/redis": "^1.34.9",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "frimousse": "^0.2.0",
+    "groq": "^5.7.0",
+    "groq-js": "^1.26.0",
     "lucide-react": "^0.510.0",
     "next": "^15.3.6",
     "react": "^19.1.0",
